--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                     <a href="https://wa.me/212621294967" class="btn btn-whatsapp">WhatsApp | واتساب</a>
                 </div>
             </div>
-            <div class="hero-image">
-                <!-- Replace 'doctor-photo.jpg' with your actual photo file -->
-                <img src="/profile.jpeg" alt="Dr. Mohamed Fathallah" class="doctor-photo">
+            <div class="hero-images">
+                <img src="focus1.jpg" alt="Focus 1">
+                <img src="focus 2.png" alt="Focus 2">
             </div>
         </div>
     </section>
